Fixed missing spacing between measurement fields

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,11 +21,3 @@
     width: 100%;
     background-color: rgb(32, 131, 212);
 }
-
-.measurement-fields-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-flow: row wrap;
-    margin-bottom: 2rem;
-}
